Revert "Alignment and shadow fixes (#94)"
This reverts commit dce2f969cdcfabcdca61d2bb9f13f4d4d708304d.

--- a/assets/sass/_button.sass
+++ b/assets/sass/_button.sass
@@ -9,4 +9,3 @@ button,
   &.button-outline
     border-width: 2px
     background-color: #FFF
-    line-height: 44px
